2020-07-17  Bruno Haible  <bruno@clisp.org>

	Fix build failure during "make distcheck".
	* testsuite/Makefile.am (EXTRA_DIST): Remove all directories. Add
	individual files instead.
	* testsuite/poke.libpoke/Makefile.am (EXTRA_DIST): Add libpoke.exp.
	* testsuite/poke.mi-json/Makefile.am (EXTRA_DIST): Add mi-json.exp.
	* HACKING: Mention that test files beed to be listed.

2020-07-17  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-ast.h (PKL_AST_TYPE_S_UNION_P): Renamed from
	PKL_AST_TYPE_S_UNION.
	* libpoke/pkl-ast.c (pkl_ast_make_struct_type): Update
	accordingly.
	(pkl_ast_dup_type): Likewise.
	(pkl_ast_print_1): Likewise.
	* libpoke/pkl-typify.c (pkl_typify1_ps_type_struct): Likewise.
	* libpoke/pkl-gen.pks (struct_mapper): Likewise.
	* libpoke/pkl-anal.c (pkl_anal1_ps_type_struct): Likewise.
	(pkl_anal2_ps_type_struct): Likewise.

2020-07-17  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-typify.c (pkl_typify1_ps_type_struct): Unions can't
	be integral.
	* testsuite/poke.pkl/int-struct-type-diag-11.pk: New test.

2020-07-17  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-typify.c (pkl_typify1_ps_struct): Do not allow
	labels in fields in integral structs.
	* testsuite/poke.pkl/int-struct-type-diag-10.pk: New test.

2020-07-17  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-ast.h (sct): New field sct.itype.
	(PKL_AST_TYPE_S_ITYPE): Define
	* libpoke/pkl-ast.c (pkl_ast_make_struct_type): Get itype as
	argument.
	(pkl_ast_print_1): Print out itype.
	* libpoke/pkl-typify.c (pkl_typify1_ps_struct): Pass itype to
	pkl_ast_make_struct_type.
	(pkl_typify1_ps_type_struct): New handler.
	(pkl_phase_typify1): Install handler.
	* libpoke/pkl-tab.y (integral_struct): New rule.
	(struct_type_specifier): Support for integral structs.
	* testsuite/poke.pkl/int-struct-type-diag-1.pk: New test.
	* testsuite/poke.pkl/int-struct-type-diag-2.pk: Likewise.
	* testsuite/poke.pkl/int-struct-type-diag-9.pk: Likewise.