@@ -1,3 +1,10 @@
+2020-07-17  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* libpoke/pkl-gen.pks: Remove obsolete comments.
+	* libpoke/pkl-tab.y (INTEGER): Likewise.
+	(identifier): Likewise.
+	* libpoke/pk-val.c: Likewise.
+
 2020-07-17  Bruno Haible  <bruno@clisp.org>
 
 	Fix build failure during "make distcheck".
